Fix Kafka consumer stops committing offsets issue and update bitnami kafka image